Fri Mar 30 13:55:52 UTC 2007  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/Messenger_Imr/run_test.pl:
          Inform ImR of initial InfoRepo shutdown. This is a work around
          for a bug in the 1.5a/DOC ImR. The ImR interprets an failure
          to ping the InfoRepo as a timeout and throws a location_forward
          to the publisher, leading to a publisher error.

Thu Mar 29 15:26:47 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * MPC/config-legacy:
        * MPC/config-legacy/README.txt:
        * MPC/config-legacy/vc8_warnings.mpb:

          Added a new directory that will hold MPC config files needed to build
          DDS with older versions of ACE+TAO.  See the README.txt for details.

Wed Mar 28 15:28:05 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/InfoRepo/PersistenceUpdater.h:
        * dds/InfoRepo/UpdateManager.h:
          Fix minor class inheritance issues.

        * dds/InfoRepo/Updater.cpp:
          Add missing pch header file.

Wed Mar 28 14:38:10 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/InfoRepo/PersistenceUpdater.h:
          Add missing header files. Caused problems on DOC builds.

Wed Mar 28 14:11:05 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.cpp:
          Pass data downstream to persistence layer.

        * dds/InfoRepo/PersistenceUpdater.h:
        * dds/InfoRepo/PersistenceUpdater.cpp:
          Connect up the PersistenceUpdater with the upper layer
          UpdateManager.

        * dds/InfoRepo/UpdateDataTypes.h:
          Templatize the data structures. Allows for reusability.

        * dds/InfoRepo/UpdateManager.h:
        * dds/InfoRepo/UpdateManager.cpp:
          Added interfaces for upstream communication.

        * dds/InfoRepo/Updater.h:
        * dds/InfoRepo/Updater.cpp:
          Add cpp file. This got rid of a circular include dependency.

        * dds/InfoRepo/Updater.inl:
          Removed this file.
